# metallircd

./: Cargo.toml  README.md  metallirc.toml
libmetallirc/: Cargo.toml
libmetallirc/src/: lib.rs  logging.rs  modes.rs  modules.rs  util.rs
libmetallirc/src/channels/: chan.rs  manager.rs
libmetallirc/src/conf/: cfgfile.rs  mod.rs
libmetallirc/src/messages/: mod.rs  numericreply.rs  textmessage.rs
libmetallirc/src/modes/: mod.rs
libmetallirc/src/users/: mod.rs  newuser.rs  user.rs  usermanager.rs
metallirc_modules/: modes_list.md
metallirc_modules/away/: Cargo.toml
metallirc_modules/away/src/: lib.rs
metallirc_modules/core/: Cargo.toml
metallirc_modules/core/src/: channels.rs  commands.rs  lib.rs  list.rs  misc.rs  modes.rs  oper.rs  textmessages.rs  topic.rs  who.rs
metallirc_modules/mod_skel/: Cargo.toml
metallirc_modules/mod_skel/src/: lib.rs
src/: logging.rs  main.rs  modules.rs  scheduling.rs  settings.rs  util.rs
src/channels/: chan.rs  manager.rs  mod.rs  modes.rs
src/conf/: cfgfile.rs  mod.rs
src/messages/: ircmessage.rs  mod.rs  numericreply.rs  textmessage.rs
src/modes/: mod.rs
src/modules/: away.rs  core_channels.rs  core_commands.rs  core_oper.rs  core_textmessages.rs  list.rs  mod.rs  modes.rs  topic.rs
src/scheduling/: input_handling.rs  mod.rs  procs.rs  replies.rs  users_handling.rs
src/users/: input_handling.rs  mod.rs  newuser.rs  user.rs  usermanager.rs
