[package]

name = "metallircd"
version = "0.0.1"
authors = ["Victor Berger <victor.berger@m4x.org>"]

[dependencies.uuid]
git = "https://github.com/rust-lang/uuid.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.argparse]
git = "https://github.com/tailhook/rust-argparse"