[package]

name = "mod_core"
version = "0.0.1"
authors = ["Victor Berger <victor.berger@m4x.org>"]

[lib]
name = "mod_core"
crate_type = ["dylib"]
test = true
[dependencies.uuid]
git = "https://github.com/rust-lang/uuid.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.libmetallirc]
path = "../../libmetallirc"